tests/NormalTests/paczka1/fuzzy1/97935691.err
Error in line 10: f2IK A735 75,4
Error in line 2: ym7d2I879J A412 57,9
Error in line 9: BQfPsKS A460 79,0
Error in line 14: x6lousIj A412 61,4
Error in line 13: ym7d2I879J A735 23,9
Error in line 30: ym'd2I8'9J A'35 46,8
Error in line 26: ym7d2I879J S819 68,3
